51) kernel: usb: serial: option: adding support for Telit LE922.<br>
52) kernel: usb: serial: cdc_acm: ignore Infineon Flash Loader utility, exclude Samsung phone 04e8:685d.<br>
53) kernel: usb: serial: cdc-acm: add support for Denso cradle CU-321.<br>
54) kernel: usb: serial: cdc-acm: send zero packet for intel 7260 modem.<br>
55) kernel: usb: serial: cdc-acm: kill unnecessary messages.<br>
56) kernel: net: packet: don't check frames_per_block against negative values.<br>
57) kernel: net: change pseudohdr argument of inet_proto_csum_replace* to be a bool.<br>
58) kernel: net: simplify napi_synchronize() to avoid warnings.<br>
59) kernel: net: cdc_ncm: avoid changing RX/TX buffers on MTU changes.<br>
60) kernel: net: add scheduling point in recvmmsg/sendmmsg.<br>
61) kernel: net: possible use after free in dst_release.<br>
62) kernel: net: bridge: use kobj_to_dev instead of to_dev.<br>
63) kernel: net: pptp: fix illegal memory access caused by multiple bind()s.<br>
64) kernel: net: netfilter: xt_TCPMSS: handle CHECKSUM_COMPLETE in tcpmss_tg6().<br>
65) kernel: net: qmi_wwan: add WeTelecom-WPD600N.<br>
66) kernel: net: qmi_wwan: add SIMCom 7230E.<br>
67) kernel: net: core: revert net: fix__netdev_update_features return and add comment.<br>
68) kernel: net: core: 'ethtool' issue with querying phy settings.<br>
69) kernel: net: ipv6: addrlabel: fix ip6addrlbl_get().<br>
70) kernel: net: ipv6: honor ifindex in case we receive ll addresses in router advertisements.<br>
71) kernel: net: ipv6: update skb->csum when CE mark is propagated.<br>
72) kernel: net: ipv6: always add flag an address that failed DAD with DADFAILED.<br>
73) kernel: net: ipv6: keep existing flags when setting IFA_F_OPTIMISTIC.<br>
74) kernel: net: ipv6: fib6: install fib6 ops in the last step.<br>
75) kernel: net: ipv6: fix the incorrect return value of throw route.<br>
76) kernel: net: ipv4: no CHECKSUM_PARTIAL on MSG_MORE corked sockets.<br>
<br>
<br>
<br>