@@ -51,8 +51,6 @@ struct netns_ipv4 {
 	int sysctl_icmp_ratelimit;
 	int sysctl_icmp_ratemask;
 	int sysctl_icmp_errors_use_inbound_ifaddr;
-	int sysctl_icmp_redirects_use_orig_daddr;
-
 	int sysctl_rt_cache_rebuild_count;
 	int current_rt_cache_rebuild_count;
 
